tests/error/overload_errors/no_match_many.err
Error: Invalid call of overloaded function (at $FILE:18:15)
   | 
16 | @guppy
17 | def main() -> None:
18 |     overloaded(1, 2, 3)
   |                ^^^^^^^ No variant of overloaded function `overloaded` takes
   |                        arguments `int`, `int`, `int`

Note: Available overloads are:
  def overloaded(x: int) -> None
  def overloaded(x: int, y: int) -> None

Guppy compilation failed due to 1 previous error
